[bdist_wheel]
universal = true

[metadata]
name = hermes_tools

version = attr: hermes_tools.__version__
license = GNU Lesser General Public License v3 or later (LGPLv3+)
license_file = LICENSE
description = Manage your BOUT++ runs through python
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Jerome Guterl
author_email = michael.l.magnussen@gmail.com

keywords =
    bout++
    plasma
    numerical simulation


[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.6
package_dir=
    =.
packages=find:
test_suite = tests
setup_requires =
    setuptools

[mypy]
# Be strict
disallow_untyped_calls=True
warn_return_any=True
strict_optional=True
warn_no_return=True
warn_redundant_casts=True
warn_unused_ignores=True

[mypy-docs.source.*]
# Ignore errors in the docs
ignore_errors = True

[flake8]
max-line-length = 88
extend-ignore = E203, W503
docstring-convention = numpy

[pylint]
load-plugins = pylint.extensions.docparams, pylint.extensions.docstyle, pylint.extensions.mccabe
max-line-length = 88
disable = C0330, C0326, C0199, C0411
accept-no-param-doc = no
accept-no-raise-doc = no
accept-no-return-doc = no
accept-no-yields-doc = no
default-docstring-type = numpy
ignore-imports=yes

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 88